--- a/tests/.env
+++ b/tests/.env
@@ -1,19 +1,2 @@
-#database 資料庫定義
-DB_HOST=127.0.0.1
-DB_NAME=poki
-DB_USER=root
-DB_PASS=root
-DB_PORT=3306
-
-#base 基本變數設定
-APPS_PATH=/app/apps
 ADMIN_DIR=/adm
-ADMIN_INDEX=/adm/log
-FRONT_DIR=/front
-DAO_NAMESPACE=Beyond\Model\Dao\
-LOCK_COND=3
-SERVICE_MAIL=cloud@be-yond.com.tw
-SERVICE_MAIL_NAME=cloud
-
-DISPLAY_ERROR_DETAILS=true
-ADD_CONTENT_LENGTH_HEADER=false
+TRUE_TEST=TRUE
