--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cloud/dotenv",
+    "name": "mark801117/dotenv",
     "type": "library",
     "license": "proprietary",
     "authors": [
